Update 'xdxh35uo8-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-35b1736035.2ctv.p3.openshiftapps.com/rhtap/rhtap-qe:b3267856de97017bfd1d9b26830dfa0883ea2e20@sha256:506a41c55efa97656595770a5d4cc39a0c328db32966f500cc87cdbda9627d26

--- a/components/xdxh35uo8-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/xdxh35uo8-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xdxh35uo8-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-35b1736035.2ctv.p3.openshiftapps.com/rhtap/rhtap-qe:b3267856de97017bfd1d9b26830dfa0883ea2e20@sha256:506a41c55efa97656595770a5d4cc39a0c328db32966f500cc87cdbda9627d26
+          name: container-image
